# serializer version: 1
# name: test_device_registry_entry[api_discovery_items0-9.10.1]
  'http://1.2.3.4:80'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items0-9.10.1].6
  '9.10.1'
# ---
# name: test_device_registry_entry[api_discovery_items0]
  'http://1.2.3.4:80'
# ---
# name: test_device_registry_entry[api_discovery_items0].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items0].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items0].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items0].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items0].6
  '9.10.1'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1]
  'http://1.2.3.4:80'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items1-9.80.1].6
  '9.80.1'
# ---
# name: test_device_registry_entry[api_discovery_items1]
  'http://1.2.3.4:80'
# ---
# name: test_device_registry_entry[api_discovery_items1].1
  set({
    tuple(
      'mac',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1].2
  set({
    tuple(
      'axis',
      '00:40:8c:12:34:56',
    ),
  })
# ---
# name: test_device_registry_entry[api_discovery_items1].3
  'Axis Communications AB'
# ---
# name: test_device_registry_entry[api_discovery_items1].4
  'A1234 Network Camera'
# ---
# name: test_device_registry_entry[api_discovery_items1].5
  'home'
# ---
# name: test_device_registry_entry[api_discovery_items1].6
  '9.80.1'
# ---
